--- a/MuestrasBack/src/main/resources/application.properties
+++ b/MuestrasBack/src/main/resources/application.properties
@@ -1,8 +1,17 @@
 #Spring Boot server configuration
-server.address=0.0.0.0
-server.port=8000
+#server.address=0.0.0.0
+#server.port=8000
 
 #H2 console web access configuration
 #Open "http://0.0.0.0:8000/h2-console" and hit "Connect" button
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
